apps/oxlint/src/snapshots/fixtures__cross_module_nested_config_@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/cross_module_nested_config
----------

  x eslint-plugin-import(no-cycle): Dependency cycle detected
   ,-[folder/folder-dep-a.ts:2:19]
 1 | // should report cycle detected
 2 | import { b } from './folder-dep-b.ts';
   :                   ^^^^^^^^^^^^^^^^^^^
 3 | 
   `----
  help: Refactor to remove the cycle. Consider extracting shared code into a separate module that both files can import.
  note: These paths form a cycle:
           ╭──▶ ./folder-dep-b.ts (fixtures/cross_module_nested_config/folder/folder-dep-b.ts)
           │         ⬇ imports
           │    ./folder-dep-a.ts (fixtures/cross_module_nested_config/folder/folder-dep-a.ts)
           ╰─────────╯ imports the current file

  x eslint-plugin-import(no-cycle): Dependency cycle detected
   ,-[folder/folder-dep-b.ts:2:8]
 1 | // this file is also included in folder-dep-a.ts and folder-dep-a.ts should report a no-cycle diagnostic
 2 | import './folder-dep-a.ts';
   :        ^^^^^^^^^^^^^^^^^^^
 3 | 
   `----
  help: Refactor to remove the cycle. Consider extracting shared code into a separate module that both files can import.
  note: These paths form a cycle:
           ╭──▶ ./folder-dep-a.ts (fixtures/cross_module_nested_config/folder/folder-dep-a.ts)
           │         ⬇ imports
           │    ./folder-dep-b.ts (fixtures/cross_module_nested_config/folder/folder-dep-b.ts)
           ╰─────────╯ imports the current file

Found 0 warnings and 2 errors.
Finished in <variable>ms on 4 files with 92 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
