apps/oxlint/src/snapshots/fixtures__exhaustive_deps_disable_directive_issue_13311_test.jsx@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: test.jsx
working directory: fixtures/exhaustive_deps_disable_directive_issue_13311
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 1 file using 1 threads.
----------
CLI result: LintSucceeded
----------
