apps/oxlint/src/snapshots/fixtures__extends_config_--disable-nested-config@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --disable-nested-config
working directory: fixtures/extends_config
----------

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-unused-vars.html\eslint(no-unused-vars)]8;;\: Variable 'x' is declared but never used. Unused variables should start with a '_'.
   ,-[overrides/test.ts:1:7]
 1 | const x: any = 3;
   :       |
   :       `-- 'x' is declared here
   `----
  help: Consider removing this declaration.

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-unused-vars.html\eslint(no-unused-vars)]8;;\: Function 'component' is declared but never used.
   ,-[overrides/test.tsx:1:10]
 1 | function component(): any {
   :          ^^^^|^^^^
   :              `-- 'component' is declared here
 2 |   return <a>click here</a>;
   `----
  help: Consider removing this declaration.

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\eslint(no-debugger)]8;;\: `debugger` statement is not allowed
   ,-[overrides_same_directory/config/test.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   `----
  help: Remove the debugger statement

Found 3 warnings and 0 errors.
Finished in <variable>ms on 4 files with 99 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
